Change code samples to overflow and scroll, fixes #60

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -438,4 +438,8 @@ pre code {
     margin-left: .2rem;
     margin-right: .2rem;
   }
+  pre {
+    white-space: pre;
+    overflow-x: scroll;
+  }
 }
